fix column width on tablets

--- a/sass/_blocks.scss
+++ b/sass/_blocks.scss
@@ -720,6 +720,14 @@ hr.wp-block-separator{
 	align-items: center;
 }
 
+.wp-block-columns.has-md-full-width{
+	@include media-breakpoint-down(lg) {
+		.wp-block-column{
+			flex-basis: 100%!important;
+		}
+	}
+}
+
 .wp-block-media-text, .page-template-page_full-width .entry-content .alignwide.wp-block-media-text{
 	.wp-block-media-text__content{
 		padding: 20px 0 0;
